// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generation-and-usage creates api specific usage for entity 1`] = `
Object {
  "header": "Usage Example",
  "instructions": "import { DummyClass } from '@sap/dummy-package';

const resultPromise = DummyClass.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
  "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
}
`;

exports[`generation-and-usage creates generic usage example 1`] = `
Object {
  "header": "Usage Example",
  "instructions": "import { BusinessPartner } from '@sap/cloud-sdk-vdm-business-partner-service';

const resultPromise = BusinessPartner.requestBuilder().getAll().top(5).execute({ destinationName:'myDestinationName' });
",
  "text": "To consume the service via the pregenerated typed client library run the code snippet below. For more details about OData client libraries chose \\"OData Consumption Manual\\" from the \\"Helpful Links\\" menu.",
}
`;
